kubernetes/ngo-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngo-deploy
  namespace: ngo-service
  labels:
    app: ngo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngo-service
  template:
    metadata:
      labels:
        app: ngo-service
    spec:
      containers:
        - name: ngo-service
          image: 498686972093.dkr.ecr.us-east-1.amazonaws.com/tech5/ngo-service:2eea4b3e4554b1256c78cd014b3c90416f14a644
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "256Mi"
            limits:
              cpu: "50m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
