kubernetes/ngo-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngo-service-clusterip
  namespace: ngo-service
  labels:
    app: ngo-service
spec:
  selector:
    app: ngo-service
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
