kubernetes/ngo-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngo-ingress
  namespace: ngo-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ngo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ngo-service-clusterip
                port:
                  number: 8081
